# alignment-observatory

./: .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.yml
api/: Dockerfile  __init__.py  config.py  main.py  requirements.txt
api/cache/: __init__.py  manager.py
api/routers/: __init__.py  circuits.py  ioi.py  models.py  sae.py  traces.py
api/schemas/: __init__.py  circuit.py  common.py  ioi.py  model.py  sae.py  trace.py
api/services/: __init__.py  circuit_service.py  ioi_service.py  microscope_service.py  model_manager.py  sae_service.py  trace_service.py
api/websockets/: __init__.py  trace_ws.py
dashboard/: .eslintrc.cjs  Dockerfile  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.vue  main.ts  style.css
dashboard/src/components/activation/: ActivationHeatmap.vue  DimensionList.vue  LayerStats.vue  TokenNormChart.vue  index.ts
dashboard/src/components/attention/: AttentionHeatmap.vue  AttentionStats.vue  ColorLegend.vue  HeadSelector.vue  index.ts
dashboard/src/components/attention3d/: AttentionFlow3D.vue  AttentionFlow3DControls.vue  AttentionFlow3DLegend.vue  index.ts
dashboard/src/components/circuit/: CircuitControls.vue  CircuitDetails.vue  CircuitGraph.vue  CircuitStats.vue  index.ts
dashboard/src/components/common/: BaseButton.vue  BaseCard.vue  BaseSelect.vue  ColorLegend.vue  ErrorMessage.vue  LoadingSpinner.vue  NotificationToast.vue  TokenDisplay.vue  index.ts
dashboard/src/components/ioi/: IOICircuitView.vue  IOIHeadList.vue  IOISentenceForm.vue  IOIValidation.vue  (+1 more)
dashboard/src/composables/: index.ts  useActivationViz.ts  useAttentionViz.ts  useCircuitGraph.ts  useColorScale.ts  useIOI.ts  useKeyboardShortcuts.ts  useSAE.ts  useTensorData.ts  useTheme.ts  useThreeScene.ts  useWebGLPerformance.ts  useZoomPan.ts
dashboard/src/router/: index.ts
dashboard/src/services/: api.client.ts  index.ts  websocket.client.ts
dashboard/src/stores/: circuit.store.ts  index.ts  model.store.ts  trace.store.ts  ui.store.ts
dashboard/src/types/: activation.types.ts  api.types.ts  attention.types.ts  circuit.types.ts  cytoscape-dagre.d.ts  index.ts  ioi.types.ts  sae.types.ts  tensor.types.ts  three.types.ts
dashboard/src/views/: ActivationBrowser.vue  AttentionExplorer.vue  CircuitDiscovery.vue  DashboardHome.vue  IOIDetection.vue  NotFound.vue  SAEAnalysis.vue  Settings.vue
microscope/: Cargo.toml  README.md  pyproject.toml
microscope/examples/: quickstart.py
microscope/python/alignment_microscope/: __init__.py  __init__.pyi  _core.pyi  ioi.py  ioi.pyi  sae.py  sae.pyi  streaming.py  streaming.pyi
microscope/python/alignment_microscope/architectures/: __init__.py  __init__.pyi  base.py  base.pyi  detection.py  detection.pyi  gemma.py  gpt2.py  llama.py  mistral.py  qwen.py  registry.py  registry.pyi
microscope/src/: activation.rs  attention.rs  circuit.rs  hooks.rs  intervention.rs  lib.rs  python.rs  sae.rs  streaming.rs
microscope/tests/: conftest.py  test_activation.py  test_architectures.py  test_attention.py  test_circuit.py  test_edge_cases.py  test_integration.py  test_ioi.py  test_microscope.py  test_sae.py  test_streaming.py
(+11 files in other folders)
