[package]
name = "alignment-microscope"
version = "0.1.0"
edition = "2021"
description = "High-performance interpretability engine for transformer models"
license = "Apache-2.0"
repository = "https://github.com/alignment-observatory/microscope"
keywords = ["ai", "alignment", "interpretability", "transformers", "safety"]
categories = ["science", "development-tools"]

[lib]
name = "alignment_microscope"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core computation
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.8"
num-traits = "0.2"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
numpy = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory mapping for large models
memmap2 = "0.9"

# Async runtime for streaming
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

# [[bench]]
# name = "activation_bench"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
