[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "alignment-microscope"
version = "0.1.0"
description = "High-performance interpretability engine for transformer models"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["ai", "alignment", "interpretability", "transformers", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
viz = [
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
]
transformers = [
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/alignment-observatory/microscope"
Documentation = "https://alignment-observatory.github.io/microscope"
Repository = "https://github.com/alignment-observatory/microscope"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "alignment_microscope._core"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
strict = true
